--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                  
                 </ul>
                 <ul class="navbar-nav brand">
-                    <img src="assets/imgs/avatar.jpg" alt="" class="brand-img">
+                    <img src="assets/imgs/avatars.jpg" alt="" class="brand-img">
                     <li class="brand-txt">
                         <h5 class="brand-title">Sivatharsan</h5>
                         <div class="brand-subtitle">Web Designer | Developer</div>
